--- a/src/sidepanel.html
+++ b/src/sidepanel.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Gemini Side Panel</title>
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-        height: 100vh;
-        overflow: hidden;
-      }
-      iframe {
-        width: 100%;
-        height: 100%;
-        border: none;
-      }
-    </style>
-  </head>
-  <body>
-    <iframe src="https://gemini.google.com" allow="microphone; clipboard-read; clipboard-write"></iframe>
-  </body>
+
+<head>
+  <title>Gemini</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      height: 100vh;
+      overflow: hidden;
+    }
+
+    iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+  </style>
+</head>
+
+<body>
+  <iframe src="https://gemini.google.com" allow="microphone; clipboard-read; clipboard-write"></iframe>
+</body>
+
 </html>
