--- a/src/sidepanel.html
+++ b/src/sidepanel.html
@@ -8,19 +8,90 @@
       margin: 0;
       padding: 0;
       height: 100vh;
+      display: flex;
+      flex-direction: column;
       overflow: hidden;
+      font-family: 'Google Sans', Roboto, Arial, sans-serif;
+    }
+
+    #toolbar {
+      padding: 8px;
+      background: #f1f3f4;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      border-bottom: 1px solid #dadce0;
+      flex-shrink: 0;
+    }
+
+    #screenshot-btn {
+      background-color: #1a73e8;
+      color: white;
+      border: none;
+      padding: 6px 12px;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 13px;
+      font-weight: 500;
+      display: flex;
+      align-items: center;
+      gap: 6px;
+      transition: background-color 0.2s;
+    }
+
+    #screenshot-btn:hover {
+      background-color: #1557b0;
+    }
+
+    #screenshot-btn:active {
+      background-color: #174ea6;
+    }
+
+    #status-msg {
+      font-size: 12px;
+      margin-left: 10px;
+      opacity: 0;
+      transition: opacity 0.3s;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    .status.success {
+      color: #137333;
+    }
+
+    .status.error {
+      color: #d93025;
     }
 
     iframe {
+      flex-grow: 1;
       width: 100%;
-      height: 100%;
       border: none;
+    }
+    
+    /* Icon style */
+    .icon {
+      width: 16px;
+      height: 16px;
+      fill: currentColor;
     }
   </style>
 </head>
 
 <body>
+  <div id="toolbar">
+    <button id="screenshot-btn" title="Take screenshot of current tab and copy to clipboard">
+      <svg class="icon" viewBox="0 0 24 24">
+        <path d="M21 19V5c0-1.1-.9-2-2-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zM8.5 13.5l2.5 3.01L14.5 12l4.5 6H5l3.5-4.5z"/>
+      </svg>
+      Capture & Copy
+    </button>
+    <span id="status-msg"></span>
+  </div>
   <iframe src="https://gemini.google.com" allow="microphone; clipboard-read; clipboard-write"></iframe>
+  <script src="sidepanel.js"></script>
 </body>
 
 </html>
