--- a/src/sidepanel.html
+++ b/src/sidepanel.html
@@ -70,7 +70,7 @@
       width: 100%;
       border: none;
     }
-    
+
     /* Icon style */
     .icon {
       width: 16px;
@@ -84,7 +84,8 @@
   <div id="toolbar">
     <button id="screenshot-btn" title="Take screenshot of current tab and copy to clipboard">
       <svg class="icon" viewBox="0 0 24 24">
-        <path d="M21 19V5c0-1.1-.9-2-2-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zM8.5 13.5l2.5 3.01L14.5 12l4.5 6H5l3.5-4.5z"/>
+        <path
+          d="M21 19V5c0-1.1-.9-2-2-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zM8.5 13.5l2.5 3.01L14.5 12l4.5 6H5l3.5-4.5z" />
       </svg>
       Capture & Copy
     </button>
